# implementation-pm-react

./: .gitignore  PRODUCT.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-macos.yml  build-windows.yml
output/: tauri-macos.conf.json  tauri-msi-icon.conf.json
scripts/: make-macos-icns.mjs  make-standalone.mjs  make-tauri-icon.mjs  start-dev.mjs
src/: App.tsx  seed.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AppShell.tsx  EntityDialogs.tsx  ui.tsx
src/components/navigation/: AiConfigNavigation.tsx  AiGenerationNavigation.tsx  ProjectSwitchNavigation.tsx  ProjectWorkspaceNavigation.tsx  index.tsx  shared.tsx  types.ts
src/pages/: ai-generation.tsx  ai-model-config.tsx  page-shared.tsx  pages.tsx  project-execution.tsx  project-intelligence.tsx  project-workbench.tsx
src/services/: aiConfigFile.ts  aiGenerationAudit.ts  aiService.ts  aiTaskCommandService.ts  assistantProjectDataService.ts  assistantSessions.ts  contextBuilder.ts  deliverableFileStorage.ts  deliveryWorkflowService.ts  emailDraftService.ts  httpRepository.ts  modelGateway.ts  projectImport.ts  projectStatus.ts  repository.ts  repositoryFactory.ts  sqliteRepository.ts  weeklyReportService.ts
src/styles/: app.css
