[package]
name = "implementation-pm"
version = "0.1.19"
description = "Personal software implementation project manager"
authors = ["local"]
edition = "2021"

[lib]
name = "implementation_pm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
imap = "3.0.0-alpha.15"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_System_Com", "Win32_UI_Shell"] }
